complete fetch comments with queries

--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "migrate-latest": "knex migrate:latest",
     "migrate-rollback": "knex migrate:rollback",
     "seed": "knex seed:run"
-    
   },
   "repository": {
     "type": "git",
@@ -30,6 +29,10 @@
   },
   "devDependencies": {
     "jest": "^26.6.3",
+    "jest-sorted": "^1.0.8",
     "supertest": "^6.1.1"
+  }, 
+  "jest": {
+    "setupFilesAfterEnv": ["jest-sorted"]
   }
 }
