--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "jest": "^26.6.3",
     "jest-sorted": "^1.0.8",
     "supertest": "^6.1.1"
-  }, 
+  },
   "jest": {
-    "setupFilesAfterEnv": ["jest-sorted"]
+    "setupFilesAfterEnv": [
+      "jest-sorted"
+    ]
   }
 }
