--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "migrate-make": "knex migrate:make",
     "migrate-latest": "knex migrate:latest",
     "migrate-rollback": "knex migrate:rollback",
-    "seed": "knex seed:run"
+    "seed": "knex seed:run", 
+    "find-logs": "grep -R --line-number console.log ./ --exclude-dir node_modules"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,7 @@
   },
   "homepage": "https://github.com/northcoders/fe-nc-games#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "knex": "^0.21.16",
     "pg": "^8.5.1"
