--- a/package.json
+++ b/package.json
@@ -30,8 +30,8 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "knex": "^0.21.16",
-    "pg": "^8.5.1"
+    "pg": "^8.5.1",
+    "pg-format": "^1.0.4"
   },
   "devDependencies": {
     "jest": "^26.6.3",
