--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "migrate-make": "knex migrate:make",
     "migrate-latest": "knex migrate:latest",
     "migrate-rollback": "knex migrate:rollback",
-    "seed": "knex seed:run",
+    "seed": "node db/run-seed.js",
     "find-logs": "grep -R --line-number console.log ./ --exclude-dir node_modules",
     "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex seed:run",
     "migrate-latest:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:latest",
