--- a/package.json
+++ b/package.json
@@ -4,16 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest app.spec.js",
+    "test": "jest",
     "setup-dbs": "psql -f db/setup.sql",
-    "migrate-make": "knex migrate:make",
-    "migrate-latest": "knex migrate:latest",
-    "migrate-rollback": "knex migrate:rollback",
     "seed": "node db/run-seed.js",
     "find-logs": "grep -R --line-number console.log ./ --exclude-dir node_modules",
     "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex seed:run",
-    "migrate-latest:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:latest",
-    "migrate-rollback:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex migrate:rollback",
     "start": "node listen.js"
   },
   "repository": {
