--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "setup-dbs": "psql -f db/setup.sql",
     "seed": "node db/run-seed.js",
     "find-logs": "grep -R --line-number console.log ./ --exclude-dir node_modules",
-    "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) knex seed:run",
+    "seed:prod": "NODE_ENV=production DB_URL=$(heroku config:get DATABASE_URL) node db/run-seed.js",
     "start": "node listen.js"
   },
   "repository": {
